plugins {
  id 'java'
  id 'com.github.johnrengelman.shadow' version '2.0.4'
}
apply plugin: 'maven-publish'

group 'com.github.EB-wilson'
version 'V1.6-A1'

sourceCompatibility = 17
targetCompatibility = 17

repositories {
  mavenCentral()
  maven{ url 'https://www.jitpack.io' }
}

dependencies {
  implementation 'org.ow2.asm:asm:9.3'

  annotationProcessor 'com.github.EB-wilson.UniverseCore:annotations:1.7.4'
}

publishing {
  publications {
    maven(MavenPublication) {
      from components.java
    }
  }
}

assemble{
  dependsOn(shadowJar)
}

generateMetadataFileForMavenPublication{
  dependsOn(shadowJar)
}

allprojects{
  tasks.withType(JavaCompile){
    options.encoding = "UTF-8"

    options.fork = true
    options.forkOptions.jvmArgs.addAll([
        "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
        "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
        "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
        "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
        "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
        "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
    ])

    options.compilerArgs.addAll([
        "--add-exports", "java.base/jdk.internal.misc=ALL-UNNAMED"
    ])
  }
}
